[project]
name = "mi-web-reflex"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorena Duran",email = "lorenadreyes01@gmail.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "reflex (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
